# pytest-action-playground

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/pytest_action_playground/: __init__.py
tests/: conftest.py  test_demo.py
