[project]
name = "pytest-action-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mildc055ee", email = "mildc055ee@gmail.com" }
]
dependencies = [
    "tensorflow>=2.16.1",
    "pytest>=8.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_action_playground"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
